Rearrange structure